# scixtracer-rest

./: readme.md  setup.cfg  setup.py
scixtracer_rest/: main.py
scixtracer_rest/routers/: data.py  datasets.py  queries.py
