[metadata]
name = sxt_rest
version = 0.0.1
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://
license = BSD
description = RESTful API for the SciXTracer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License ::BSD

[options]
packages = find:
python_requires = >=3.10

# add your package requirements here
install_requires =
    fastapi >= 0.110.1
    uvicorn >= 0.29.0
    scixtracer >= 0.0.1
